# pycev

./: .buildinfo  .gitignore  README.md  changelog.html  genindex.html  index.html  objects.inv  pycev.html  pycev.py  pyproject.toml  release-version.py  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: pydocstyle.yml  pylint.yml  pytest-unit-tests.yml  release.yml  sphinx-build.yml
_modules/: index.html  pycev.html
_modules/pycev/: pycev.html
_sources/: index.rst.txt  pycev.rst.txt
_static/: classic.css
ci/: Jenkinsfile  test.sh
docsource/: conf.py  pycev.rst  sphinxrequires.txt
pycev/: __init__.py  pycev.py
source/: changelog.rst  conf.py  index.rst  pycev.rst
tests/functional/: test_loadcev.py  test_loadeverycev.py
tests/unit/: test_checksum.py  test_importpycev.py
