[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pycev"
authors = [
    {name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}
]
maintainers = [
    {name = "Joe Stanley", email = "engineerjoe440@yahoo.com"}
]
description = "Schweitzer Engineering Laboratories (SEL) Compressed EVent (CEV) Reader"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Home = "https://pycev.readthedocs.io/en/latest/"
Repository = "https://github.com/engineerjoe440/pycev/"
PyPI = "https://pypi.org/project/pycev/"
Issues = "https://github.com/engineerjoe440/pycev/issues"

[tool.flit.module]
name = "pycev"